--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,4 +1,6 @@
-
+backend:
+  name: git-gateway
+  branch: main # Branch to update (optional; defaults to master)
 media_folder: "src/assets/images" # Location where files will be stored in the repo
 public_folder: "src/assets/images" # The src attribute for uploaded media
 collections:
