--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -13,4 +13,10 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Featured Image", name: "heroImage", widget: "image" }
+      - { label: "Gallery",
+          name: "galleryImages",
+          widget: "list",
+          summary: '{{fields.image}}',
+          field: { label: "Gallery image", name: "image", widget: "image" } }
+      - { label: "Tags", name: "tags", widget: "list", field: {label: "Tag", name: "tag", widget: "string"} }
       - { label: "Body", name: "body", widget: "markdown" }
