--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -16,7 +16,8 @@ collections:
       - { label: "Gallery",
           name: "galleryImages",
           widget: "list",
-          summary: '{{fields.image}}',
-          field: { label: "Gallery image", name: "image", widget: "image" } }
+          fields:
+            { label: "Image", widget: "image" }
+            { label: "Alt Text", name: "alt", widget: "string" }
       - { label: "Tags", name: "tags", widget: "list", field: {label: "Tag", name: "tag", widget: "string"} }
       - { label: "Body", name: "body", widget: "markdown" }
